syntax = "proto3";

import "Messages/CommonTypes.proto";

option csharp_namespace = "GrpcServer.Api.Protos.Messages.Products";

package grpc_server.api.protos.messages.products;

message CreateProductCommand {
    string name = 1;
    ListOfString strings = 2;
}
