syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "GrpcServer.Api.Protos.Messages.Products";

package grpc_server.api.protos.messages.products;

message GetProductsPagedQuery {
    int32 page_no = 1;
    int32 page_size = 2;
    google.protobuf.StringValue order_by = 3;
}
