syntax = "proto3";

option csharp_namespace = "GrpcServer.Api.Protos.Messages.Products";

package grpc_server.api.protos.messages.products;

message UpdateProductCommand {
    string name = 1;
    string id = 2;
}
